# chess

./: .gitignore  CMakeLists.txt  README.md  build-cmake.bat  build-cmake.sh  build.bat  build.sh  todo.txt
res/scenes/: castle.txt  default.txt
res/shaders/: basicf.glsl  basicv.glsl  cubemapf.glsl  cubemapv.glsl  ghostf.glsl  outlinef.glsl  outlinev.glsl  texturef.glsl
src/: main.cpp
src/asset_management/: asset_management.cpp  asset_management.hpp  scene.cpp  scene.hpp  shader.hpp  texture.cpp  texture.hpp
src/display/: display.cpp  display.hpp
src/event/: event.cpp  event.hpp
src/math/: math.cpp  math.hpp
